Fix movie title margin on small screen

--- a/src/MovieGrid/MovieGrid.css
+++ b/src/MovieGrid/MovieGrid.css
@@ -16,6 +16,14 @@
 @media only screen and (max-width: 949px) {
   .movie-grid {
     display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .movie-grid {
+    display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 10px;
   }
